Darken blue gradient on login & correct type size + spacing

--- a/app/assets/stylesheets/styles.styl
+++ b/app/assets/stylesheets/styles.styl
@@ -159,7 +159,7 @@ pre, code {
   text-align: center
   text-shadow: 0 1px 0 rgba(255,255,255,.5)
 
-  h1 { margin: 0 0 1em }
+  h1 { margin: 0 0 .75em }
   p { color: #666 }
   strong { color: #333 }
 
@@ -177,17 +177,19 @@ pre, code {
     border-bottom-width: 2px
     border-radius: 0 0 3px 3px
     padding: 2em
+    font-size: 15
 
-    p { font-size: 15 }
-
-  .private
-    background: linear-gradient(top, #f4f9fa, #eaf2f5)
+  .private    
     background-color: #eaf2f5
-    border-bottom: 1px solid #cee1e8
+    background: linear-gradient(top, #F5F9FA, #E1EDF4)
+    border-bottom: 1px solid #C8DDE5
     border-radius: 3px 3px 0 0
 
   .public
     border-top: none
+  
+  .button
+    margin: 1.25em 0 0
 
   .col-1
     margin: 3em 0 0
